--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
-    <title>ToDo App</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Task Tracker</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 id="main-heading">ToDo App</h1>
-    <div class="outer">
-      <div class="grid-items">
-        <input type="text" id="todo-input" placeholder="Enter task here..." />
-        <input type="date" id="item-date" />
-
-        <button id="add" onclick="addTodo(); ">Add</button>
-      </div>
-      <div class="container-items grid-items"></div>
-    </div>
+    <header>
+      <nav>
+        <h1>Task Tracker</h1>
+      </nav>
+    </header>
+    <main>
+      <section class="task-form">
+        <h2>Add Task</h2>
+        <form id="task-form">
+          <div class="form-group">
+            <label for="task-title">Task Title:</label>
+            <input type="text" id="task-title" required />
+          </div>
+          <div class="form-group">
+            <label for="task-date">Due Date:</label>
+            <input type="date" id="task-date" required />
+          </div>
+          <button type="submit">Add Task</button>
+        </form>
+      </section>
+      <section class="task-list">
+        <h2>Task List</h2>
+        <select id="filter-tasks">
+          <option value="">All</option>
+          <option value="last10">Last 10 days</option>
+          <option value="last15">Last 15 days</option>
+        </select>
+        <div class="tasks"></div>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
